--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@ nav a{color:var(--black);text-decoration:none;font-weight:600;margin:0 .6rem}
 <nav id="navbar">
   <a href="#" class="brand">Nuklal</a>
   <div class="nav-links">
-    <a href="#home">Accueil</a>
-    <a href="#products">Produits</a>
-    <a href="#about">À propos</a>
-    <a href="#contact">Contact</a>
-  </div>
+  <a href="#home">Accueil</a>
+  <a href="#products">Produits</a>
+  <a href="#about">À propos</a>
+  <a href="#contact">Contact</a>
+</div>
   <span class="hamburger">☰</span>
 </nav>
   <header>
@@ -107,7 +107,21 @@ nav a{color:var(--black);text-decoration:none;font-weight:600;margin:0 .6rem}
               data-item-url="https://nuklal.com">Acheter</button>
     </div>
   </section>
+<!-- À propos -->
+<section id="about" style="padding:2rem;max-width:800px;margin:auto">
+  <h2>À propos</h2>
+  <p>
+    Nuklal, c’est la conviction que nous méritons tous le meilleur : des pièces uniques, des matériaux de qualité, une livraison rapide.  
+    Notre boutique en ligne vous propose une sélection pointue de vêtements et accessoires, livrés en Suisse et dans le monde entier.
+  </p>
+</section>
 
+<!-- Contact -->
+<section id="contact" style="padding:2rem;max-width:600px;margin:auto">
+  <h2>Contact</h2>
+  <p>Pour toute question, commande spéciale ou retour :</p>
+  <p><strong>Email&nbsp;:</strong> <a href="mailto:contact@nuklal.com" style="color:var(--gold)">contact@nuklal.com</a></p>
+</section>
   <footer>
     © 2025 Nuklal – livraison Suisse & monde.
   </footer>
