--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@ nav a{color:var(--black);text-decoration:none;font-weight:600;margin:0 .6rem}
   </style>
 </head>
 <body>
+<section id="home" class="home"></section>
   <!-- Navbar -->
 <nav id="navbar">
   <a href="#" class="brand">Nuklal</a>
