--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@ nav a{color:var(--black);text-decoration:none;font-weight:600;margin:0 .6rem}
   <a href="#products">Produits</a>
   <a href="#about">À propos</a>
   <a href="#contact">Contact</a>
+<a href="cgv.html">CGV</a>
 </div>
   <span class="hamburger">☰</span>
 </nav>
