--- a/index.html
+++ b/index.html
@@ -116,6 +116,9 @@ footer a:hover{color:var(--gold)}
               data-item-url="https://nuklal.com">Acheter</button>
     </div>
   </section>
+  <!-- Elfsight AliExpress Reviews | Untitled AliExpress Reviews -->
+<script src="https://static.elfsight.com/platform/platform.js" async></script>
+<div class="elfsight-app-1acf479f-fe36-4d8f-9835-bcf70f175575" data-elfsight-app-lazy></div>
 <!-- À propos -->
 <section id="about" style="padding:2rem;max-width:800px;margin:auto">
   <h2>À propos</h2>
