--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@ footer a:hover{color:var(--gold)}
     <p>nous méritons le meilleur</p>
   </header>
 <section id="products" class="products">
-  
+  <!-- Widget AliExpress -->
+<script src="https://apps.elfsight.com/p/platform.js" defer></script>
+<div class="elfsight-app-ALIEXPRESS_WIDGET_ID" style="width:100%;margin:2rem 0"></div>
     <!-- 5 produits -->
     <div class="card">
       <img src="https://i.imgur.com/X8jQh7b.png" alt="T-shirt Oversize">
