--- a/index.html
+++ b/index.html
@@ -55,8 +55,9 @@ footer a:hover{color:var(--gold)}
   </header>
 <section id="products" class="products">
   <!-- Widget AliExpress -->
-<script src="https://apps.elfsight.com/p/platform.js" defer></script>
-<div class="elfsight-app-<div class="elfsight-app-1acf479f-fe36-4d8f-9835-bcf70f175575" data-elfsight-app-lazy></div>" style="width:100%;margin:2rem 0"></div>
+<!-- Widget AliExpress -->
+<script src="https://static.elfsight.com/platform/platform.js" async></script>
+<div class="elfsight-app-1acf479f-fe36-4d8f-9835-bcf70f175575" data-elfsight-app-lazy></div>
     <!-- 5 produits -->
     <div class="card">
       <img src="https://i.imgur.com/X8jQh7b.png" alt="T-shirt Oversize">
